Ajuster le nouveau logo

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -723,7 +723,7 @@ Recherche, Modeles, Services, Ref Biblio
 
 /* Logo */
 .logo {
-  max-width: 300px;
+  max-width: 80px; /* TEMP */
 }
 .name {
   display: none;
