Recherche - nouvelle version

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -199,6 +199,12 @@ p {
   width: 25%;
   margin-bottom: 0;
 }
+#block-collapsiblesearch {
+  width: auto;
+  position: absolute;
+  right: 15%;
+  top: 5px;
+
 #block-reseauxsociaux {
   float: right;
 }
