--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1140,6 +1140,15 @@ div.region-content #edit-crise-facet {
   }
 }
 
+/* Glossaire */
+.view-glossaire {
+  margin-top: 2em;
+  .views-field-view-node a {
+    border: 1px solid #86BC42;
+    border-radius: 8px;
+  }
+}
+
 /* TODO: Contact - Bonifications */
 /* TODO: fleches, motscles */
 
