Normaliser espaces entre contenu et contenus associés en bas de page

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -92,7 +92,7 @@ p {
 * Regions
 */
 .region-content {
-  margin-bottom: 90px;
+  margin-bottom: 2em;
 }
 
 /* Fullwidth */
@@ -335,7 +335,7 @@ ul.menu > li a:after {
 
 /* Régions (suite) */
 .page_bottom {
-  padding-top: 50px;
+  padding-top: 0;
   padding-bottom: 50px;
 }
 .footer,
