--- a/templates/views/views-view-unformatted--accueil-groupes--block-1.html.twig
+++ b/templates/views/views-view-unformatted--accueil-groupes--block-1.html.twig
@@ -23,7 +23,7 @@
 <div class="tabbable tabs-left">
   <ul class="nav nav-tabs nav-stacked">
     {% for row in rows %}
-      {% set linktext = row['content']['#row']._relationship_entities['field_groupe'].label %}
+      {% set linktext = row['content']['#row']._entity.fields.title.value %}
       {% set linkid = "tab-" ~ row['content']['#view'].dom_id ~ "-" ~ row['content']['#row'].index %}
       {% set listclass = row['content']['#row'].index == 0 ? 'active' %}
       <li class="{{listclass}}"><a href="#{{ linkid }}" data-toggle="tab">{{ linktext }}</a></li>
