--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -902,7 +902,8 @@ ul {
 .field--label,
 .region-page-bottom h2.block-title,
 .path-frontpage .block-title,
-.field-group-accordion-wrapper h3 {
+.field-group-accordion-wrapper h3,
+.path-user .region-content .block-title {
     font-size: 12px;
     font-weight: 700;
     font-family: "Poppins",sans-serif;
@@ -1224,6 +1225,21 @@ ul.quicktabs-tabs li.active a {
 
 
 /* Profil Utilisateur*/
+.path-user {
+  .nav-tabs {
+    margin-bottom: 2em;
+  }
+  .nav-tabs > li > a {
+      padding: 6px 20px 5px;
+  }
+  li.active a {
+    border: 1px solid #222;
+    border-radius: 20px;
+  }
+
+}
+
+
 
 
 /* TODO: Contact - Bonifications */
