Tweak the content check to allow add2any (span with no text) to pass
Refs #30788

--- a/templates/block/block.html.twig
+++ b/templates/block/block.html.twig
@@ -47,7 +47,7 @@
 #}
 {# Similar to https://www.drupal.org/project/drupal/issues/953034 #}
 {% set content_rendered = content|render %}
-{% if content_rendered|striptags('<img><i>')|trim is empty ? false : true %}
+{% if content_rendered|striptags('<img><i><span>')|trim ? true : false %}
   {%
     set classes = [
       'block',
