--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1154,35 +1154,35 @@ div.region-content #edit-crise-facet {
   }
   .nav-tabs > li > a {
     background: #dff0d8;
-font-weight: 400;
-padding: 0px 0px;
-font-size: 12px;
-text-transform: uppercase;
-letter-spacing: 0;
-
+    font-weight: 400;
+    padding: 0px 0px;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    border: 1px solid #86BC42;
   }
 }
 
 .tabbable_title_wrapper {
   bottom: 30px;
-left: 0;
-padding: 0 25px;
-position: absolute;
-right: 0;
-text-decoration: none;
-text-shadow: 0.1em 0.1em 0.2em black;
+  left: 0;
+  padding: 0 25px;
+  position: absolute;
+  right: 0;
+  text-decoration: none;
+  text-shadow: 0.1em 0.1em 0.2em black;
 }
 
-.tabbable_body,
+.tabbable_body a,
 .tabbable_title a {
   color: #fff;
-display: block;
-font-size: 20px;
-font-weight: normal;
-line-height: 20px;
-text-decoration: none;
-cursor: hand;
-text-align: center;
+  display: block;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 20px;
+  text-decoration: none;
+  cursor: hand;
+  text-align: center;
 }
 
 .tabbable_title {
