--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -188,7 +188,11 @@ p {
   border-radius: 0;
 }
 
-
+.navbar-default .navbar-nav > .active > a:hover, 
+.navbar-default .navbar-nav > .active > a:focus {
+  background-color: transparent;
+  color: #222;
+}
 
 /**
 * blocs headers
