--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1465,6 +1465,31 @@ ul.quicktabs-tabs li.active a {
 }
 
 
+
+/* ENLEVER BOUTON DE SEARCH BUTTON */
+#edit-submit--2.button {
+  background: transparent;
+  color: #000;
+  overflow: hidden;
+  border-radius: 0 !important;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  letter-spacing: 0;
+  padding: 0;
+  display: inline-block;
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+  border: none;
+  text-indent: -9999px;
+  width: 30px;
+  height: 30px;
+  background: #eee;
+}
+
 /* TODO: Contact - Bonifications */
 /* TODO: fleches, motscles */
 
