--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1495,7 +1495,7 @@ ul.quicktabs-tabs li.active a {
 
 
 
-/* ENLEVER BOUTON DE SEARCH BUTTON */
+/* ENLEVER BOUTON DE SEARCH BUTTON 
 #edit-submit--2.button,
 #crisecustom-search-form #edit-actions #edit-submit {
   background: transparent;
@@ -1520,6 +1520,7 @@ ul.quicktabs-tabs li.active a {
   background: #eee;
   z-index: 10;
 }
+*/
 
 /* TODO: Contact - Bonifications */
 /* TODO: fleches, motscles */
