Ne pas cacher les drapeaux sur le profil

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1412,6 +1412,9 @@ ul.quicktabs-tabs li.active a {
 .main-container .flag {
   display: none;
 }
+.path-user .main-container .flag {
+  display: block;
+}
 
 /**/
 /* Intégration profil */
