--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -277,14 +277,15 @@ ul.list-social li {
 }
 
 
-
+/* Accueil - Recherche avec facette */
 /* Mettre le formulaire pleine largeur, réparti entre 3 éléments:  15%/70%/15% */
 .block-views-exposed-filter-blockenvironnement-recherche-page-1 {
   .form-item-crise-facet {
         width: 15%;
+        float: left;
   }
   .form-type-search-api-autocomplete {
-     width: 69%;
+     width: 74%;
   }
   // valider ailleurs
   .form-actions {
@@ -293,6 +294,15 @@ ul.list-social li {
   .form-inline .input-group, .navbar-form .input-group {
     width: 100%;
   }
+  .views-exposed-form .form-item {
+    padding-right: 0;
+  }
+
+  #edit-search-api-fulltext--2 {
+    border-bottom-right-radius: 30px;
+border-top-right-radius: 30px;
+  }
+
 }
 /* Variante pour le champ apparaissant sur la page Recherche */
 #views-exposed-form-environnement-recherche-page-1 {
@@ -301,10 +311,16 @@ ul.list-social li {
     float: left;
   }
 }
+
 /* Ne pas montrer une loupe supplémentaire sur le bouton Rechercher */
 #edit-submit-environnement-recherche .glyphicon {
-  display: none;
+  /*display: none;*/
 }
+/* Form */
+#views-exposed-form-environnement-recherche-page-1 {
+  
+}
+
 
 
 
@@ -697,9 +713,6 @@ h3.no-icons {
   color: #86bc42;
 }
 
-
-
-/* Accueil bloc recherche à développer */
 
 
 /* Vues + Listes - règles générales */
@@ -1592,7 +1605,32 @@ background: transparent;
   }
 } 
 
-/* TODO: fleches, motscles */
+/* Taxonomie Listes */
+.path-taxonomy {
+  ul.links {
+    display: block;
+    clear: both;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-weight: bold;
+  }
+  .list-inline > li {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+/* Médias */
+audio,
+video {
+  width: 100%;
+  height: auto;
+}
+.path-media .field--name-field-media-image {
+  padding-bottom:2em;
+}
+
 
 /* Responsive @media */
 /* mobile */
