--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -226,9 +226,9 @@ p {
 
 /* Temporaire - Réduire bouton en double */
 #block-collapsiblesearch .btn {
-  border-radius: 0;
+/*  border-radius: 0;
   border: none;
-  padding: 0;
+  padding: 0;*/
 }
 
 #block-reseauxsociaux {
