--- a/templates/input/input--search--crisecustom.html.twig
+++ b/templates/input/input--search--crisecustom.html.twig
@@ -26,8 +26,14 @@
       'form-control',
     ]
   %}
-  {% block input %}
-    <input{{ attributes.addClass(classes) }} />
-    <span class="glyphicon glyphicon-search form-control-feedback"></span>
+{% block input %}
+  <div class="form-group has-feedback">
+    <input{{ attributes.addClass(classes) }}/>
+    <div class="search-button-wrapper form-control-feedback">
+      <button type="submit" class="submit-with-icon">
+        <i class="glyphicon glyphicon-search form-control-feedback"></i>
+      </button>
+    </div>
+  </div>
   {% endblock %}
 {% endspaceless %}
