--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -72,7 +72,7 @@ a:hover, a:focus, a:active {
 .field--name-body a {
   color: #86BC42;
 }
-.field--name-body {
+.page .field--name-body {
   a:hover, 
   a:focus, 
   a:active {
@@ -101,7 +101,15 @@ p {
 .block-title {
   clear: both;
 }
-
+/*ul {
+  padding-left: 30px;
+}*/
+ul.js-facets-checkbox-links {
+  padding-left: 0;
+  input[type="radio"], input[type="checkbox"] {
+    margin-right: 10px;
+  }
+}
 
 /* .menu--besoins */
 .menu--besoins {
