--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1371,21 +1371,24 @@ ul.quicktabs-tabs li.active a {
   font-weight: bold;
 }
 
-/* cases à cocher */
-.checkbox input[type="checkbox"] {
-  position: relative;
-  margin-right: 1em;
-} 
+/* S'inscrire: cases à cocher */
 .path-user .form-radio {
   margin-right: 20px;
   display: inline-block;
   position: relative;
 }
-
-
 .checkbox label {
   padding-left: 0;
 }
+/* S'inscrire: Boutons Radio */
+.radio input[type="radio"], 
+.radio-inline input[type="radio"], 
+.checkbox input[type="checkbox"], 
+.checkbox-inline input[type="checkbox"] {
+    position: relative;
+    margin-right: 1em;
+}
+
 /* titre sections */
 
 
