--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1672,6 +1672,21 @@ background: transparent;
   }
 }
 
+/* Profil Usager */
+#block-views-block-favorisation-ref-biblio-block-1 {
+  margin-bottom:0;
+}
+#block-quicktabssuggestionsdecontenu {
+  padding-top: 30px;
+  margin-top: 30px;
+  border-top: 2px solid #86BC42;
+}
+#block-views-block-medias-profil-taxo-type-groupe-block-1 {
+    padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 2px solid #86BC42;
+}
+
 /* Médias */
 audio,
 video {
