--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1717,10 +1717,14 @@ background: transparent;
   border-top: 2px solid #86BC42;
 }
 #block-views-block-medias-profil-taxo-type-groupe-block-1 {
-    padding-bottom: 60px;
+  padding-bottom: 60px;
   margin-bottom: 60px;
   border-bottom: 2px solid #86BC42;
 }
+#block-addtoanybuttons-3 {
+  float:right;
+}
+
 
 /* Médias */
 audio,
