--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -69,7 +69,7 @@ a:hover, a:focus, a:active {
     outline: none !important;
     color: #86BC42;
 }
-.field--name-body a {
+.page .field--name-body a {
   color: #86BC42;
 }
 .page .field--name-body {
