Facettes: mettre en majuscules

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -345,6 +345,11 @@ ul.list-social li {
 
 }
 
+.facet-item__value {
+  text-transform: uppercase;
+}
+
+
 
 /* Accueil - Recherche avec facette */
 /* Mettre le formulaire pleine largeur, réparti entre 3 éléments:  15%/70%/15% */
