Accueil Groupe - Ajuster image et texte

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1310,11 +1310,12 @@ div.region-content #edit-crise-facet {
   .nav-tabs > li > a {
     background: #dff0d8;
     font-weight: 400;
-    padding: 0px 0px;
+    padding: 7px 10px !important;
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 0;
     border: 1px solid #86BC42;
+    line-height: 1.83;
   }
 }
 
