--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1342,6 +1342,7 @@ div.region-content #edit-crise-facet {
 }
 .tabbable_title a{
   font-size: 32px;
+  padding-bottom: 1em;
 }
 .tabbable_body a {
   font-size: 16px;
