--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -307,9 +307,10 @@ ul.list-social li {
 }
 /* Slogan V2 (Bloc) */
 #block-textepresentationsite p {
-  padding-left: 96px;
+  padding-left: 96px; /* Taille du logo */
   font-weight: normal;
   font-style: italic;
+  font-size: 16px;
 }
 
 
