--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -424,6 +424,9 @@ border-top-right-radius: 30px;
 
 .navbar-default .navbar-nav > li > a {
  padding: 2px 6px;
+ letter-spacing: 0;
+ margin-right: 8px !important;
+ 
 /*    color: #86bc42;
     padding: 3px 8px;
     border-radius: 8px;
@@ -1748,6 +1751,7 @@ video {
 /* Forcer la hauteur sur Chrome */
 audio {
   height: 40px;
+  margin-bottom: 1em;
 }
 
 .path-media .field--name-field-media-image {
