--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -160,6 +160,14 @@ ul.js-facets-checkbox-links {
     background: #fff;
 }
 
+.btn-primary:hover, 
+.btn-primary:focus, 
+.btn-primary:active, 
+.btn-primary.active, 
+.open > .btn-primary.dropdown-toggle {
+    border-color: #86BC42;
+}
+
 /**
 * Regions
 */
@@ -357,7 +365,8 @@ ul.list-social li {
 
 /* Accueil - Recherche avec facette */
 /* Mettre le formulaire pleine largeur, réparti entre 3 éléments:  15%/70%/15% */
-.block-views-exposed-filter-blockenvironnement-recherche-page-1 {
+.block-views-exposed-filter-blockenvironnement-recherche-page-1,
+.block-views-exposed-filter-block-environnement-recherche-bibliographie-page-1 {
   .form-item-crise-facet {
         width: 15%;
         float: left;
@@ -378,7 +387,7 @@ ul.list-social li {
 
   #edit-search-api-fulltext--2 {
     border-bottom-right-radius: 30px;
-border-top-right-radius: 30px;
+    border-top-right-radius: 30px;
   }
 
 }
@@ -426,7 +435,7 @@ border-top-right-radius: 30px;
  padding: 2px 6px;
  letter-spacing: 0;
  margin-right: 8px !important;
- 
+
 /*    color: #86bc42;
     padding: 3px 8px;
     border-radius: 8px;
